[gd_scene load_steps=4 format=3 uid="uid://cor5raih46oms"]

[ext_resource type="Script" path="res://src/main/PlantElement/TreeLike/TreeLikeLine.gd" id="1_oac7p"]
[ext_resource type="Script" path="res://src/main/utils/DetectArea2D.gd" id="2_0daqk"]

[sub_resource type="Curve" id="Curve_sag5m"]
_data = [Vector2(0, 1), 0.0, -0.323849, 0, 0, Vector2(0.85782, 0.536364), -0.586111, -0.586111, 0, 0, Vector2(1, 0.154545), -1.91818, 0.0, 0, 0]
point_count = 3

[node name="TreeLikeLine" type="Line2D"]
script = ExtResource("1_oac7p")

[node name="LineTexture" type="Line2D" parent="."]
unique_name_in_owner = true
width_curve = SubResource("Curve_sag5m")

[node name="LineTextureBorder" type="Line2D" parent="LineTexture"]
unique_name_in_owner = true
show_behind_parent = true
width = 15.0
width_curve = SubResource("Curve_sag5m")

[node name="AreaLine" type="Area2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_0daqk")
object_node_path = NodePath("..")

[connection signal="mouse_entered" from="AreaLine" to="." method="_on_area_line_mouse_entered"]
